--- a/index.html
+++ b/index.html
@@ -238,6 +238,253 @@
       "69334651":   { name: "Afdal Arifianto", status: "Lulus" },
     "3079929362":   { name: "Ahmad Rezki", status: "Lulus" },
     "76290299":     { name: "AIRA PUTRI RAMADHANI", status: "Lulus" },
+      "73709534": { name: "Airin Pandin", status: "Lulus" },
+    "67823013": { name: "Alfred", status: "Lulus" },
+    "72594400": { name: "ANDIKA", status: "Lulus" },
+    "75331911": { name:"ANGGUN", status: "Lulus" },
+    "75069420": { name:"APRIANI FITRY PEAGO",status:"Lulus" },
+    "76756063":{ name:"BASTIAN ARI TRIONI",status:"Lulus" },
+    "78781698":{ name:"CHRISTIN NATALIA PANGGOE",status:"Lulus" },
+    "63903898":{ name:"Dela Nopita",status:"Lulus" },
+    "68794378":{ name:"DESIKA",status:"Lulus" },
+    "65874331":{ name:"DIKTAFIA",status:"Lulus" },
+    "65883819":{ name:"Dina Rista Ramadani",status:"Lulus" },
+    "72559555":{ name:"Farel Ramadan",status:"Lulus" },
+    "66028142":{ name:"FETI FERA",status:"Lulus" },
+    "77856707":{ name:"Fiki Rikfaldin",status:"Lulus" },
+    "41546604": { name:"FITRIA NINGSIH",status:"Lulus" },
+    "3065372691": { name:"GALANG SHADEWA",status:"Lulus" },
+    "75314888": { name:"GILANG",status:"Lulus" },
+    "73982629": { name:"GLEON ZARNO ALINSKI",status:"Lulus" },
+    "75727830": { name:"Ifal Firansyah",status:"Lulus" },
+    "67931265": { name:"Maykel Rifaldo",status:"Lulus" },
+    "79755009": { name:"MELINDA AYUSRIANI SUMBUNG",status:"Lulus" },
+    "72999298": { name:"MUHAMMAD RAFLI",status:"Lulus" },
+    "79477292": { name:"NAYSHELLA SEMBEL",status:"Lulus" },
+    "63290564": { name:"NUR AFIFA",status:"Lulus" },
+    "3077191908": { name:"Nur Aziza",status:"Lulus" },
+    "77279864": { name:"Nur Fatimah",status:"Lulus" },
+    "78202945": { name:"Olivia",status:"Lulus" },
+    "63774961": { name:"RAGIL",status:"Lulus" },
+    "75394781": { name:"RASYA",satus:"Lulus" },
+    "56193282": { name:"RINDIYANI",status:"Lulus" },
+    "73531205": { name:"SERA",status:"Lulus" },
+    "73748452": { name:"VIRANIS KITA",status:"Lulus" },
+    "3060591299": { name:"Wafiq Laguna",status:"Lulus" },
+    "69226189": { name:"Yongki Kristian",status:"Lulus" },
+    "69531411": { name:"ADELINE CHELSHY RIGO",status:"Lulus" },
+    "55883307": { name:"Aditya Dion Pratama",status:"Lulus" },
+    "63732849": { name:"Alya safira",status:"Lulus" },
+    "75305287": { name:"Angga",status:"Lulus" },
+    "3078578460": { name:"AYU FLORENSIA",status:"Lulus" },
+    "61135415": { name:"Dayatul Qalbi",status:"Lulus" },
+    "63238223": { name:"Elsa Priliana",status:"Lulus" },
+    "69893038": { name:"ENGLI FAREN",status:"Lulus" },
+    "65211687": { name:"ERGY CHRISTIAN SAPUTRA",status:"Lulus" },
+    "59707358": { name:"EXEL MAHENDRA",status:"Lulus" },
+    "68159200": { name:"FERDI SAMPERIA",status:"Lulus" },
+    "51742607": { name:"Gion Fernando",status:"Lulus" },
+    "45852825": { name:"HENDRIKSEN",status:"Lulus" },
+    "72340240": { name:"Herlin",status:"Lulus" },
+    "51764691": { name:"Indra Mononege",status:"Lulus" },
+    "61260474": { name:"JEMS SAPUTRA",status:"Lulus" },
+    "68811532": { name:"JIHAN",status:"Lulus" },
+    "68926461": { name:"Jihan Sabila Putri",status:"Lulus" },
+    "58574451": { name:"MARSEL",status:"Lulus" },
+    "69023864": { name:"MAX SEL OWEN",status:"Lulus" },
+    "14821939": { name:"MELBIN",status:"Lulus" },
+    "77532663": { name:"Miranda",status:"Lulus" },
+    "73576474": { name:"Moh. Asrul",status:"Lulus" },
+    "62209394": { name:"MUHAMMAD FAHRUL",status:"Lulus" },
+    "73871032": { name:"NAILA",status:"Lulus" },
+    "75028584": { name:"NUR AZIZAH",status:"Lulus" },
+    "74403591": { name:"Pashya",status:"Lulus" },
+    "71114340": { name:"Reihand Sefanya Tarro",status:"Lulus" },
+    "76321575": { name:"Rilan Ferdiansyah",status:"Lulus" },
+    "61717933": { name:"RUT",status:"Lulus" },
+    "71497635": { name:"Septiara Trilian Rigo",status:"Lulus" },
+    "77899171": { name:"Ulin Bilagoda",status:"Lulus" },
+    "65498730": { name:"VADEL ELIVAS",status:"Lulus" },
+    "62780056": { name:"VIKI",status:"Lulus" },
+    "76324252": { name:"Yandri Tangkelayuk",status:"Lulus" },
+    "79062670": { name:"Yayang",status:"Lulus" },
+    "78976029": { name:"ALFARID HIDAYAT",status:"Lulus" },
+    "85135600": { name:"ALFRANDO SIKOMBONG",status:"Lulus" },
+    "54633851": { name:"Asril Imanuel",status:"Lulus" },
+    "68784661": { name:"BAPTISTA",status:"Lulus" },
+    "72473358": { name:"CHELSI VALENCIA",status:"Lulus" },
+    "65083717": { name:"Dedi Saputra",status:"Lulus" },
+    "78239464": { name:"FAREL PRASETYA",status:"Lulus" },
+    "89428770": { name:"FARUT RIFAUSI",status:"Lulus" },
+    "3075489075": { name:"Fitriani",status:"Lulus" },
+    "76456709": { name:"Florensa Gloria",status:"Lulus" },
+    "69471019": { name:"Gandi Saputra",status:"Lulus" },
+    "79610872": { name:"Gilber",status:"Lulus" },
+    "71431993": { name:"HENDRIK BISARA",status:"Lulus" },
+    "77560316": { name:"INDI RAHMAWATI",status:"Lulus" },
+    "59830814": { name:"Jein Lestari",status:"Lulus" },
+    "76381568": { name:"KEVIN DELVECCHIO",status:"Lulus" },
+    "61157577": { name:"Kris Nugra fika",status:"Lulus" },
+    "17364756": { name:"LEONARDO",status:"Lulus" },
+    "76890433": { name:"LUIS SACHI PALULLU",status:"Lulus" },
+    "76957057": { name:"Marshila Salsabilah",status:"Lulus" },
+    "74369801": { name:"Marsya Claudia",status:"Lulus" },
+    "58432082": { name:"MERION FERNANDO",status:"Lulus" },
+    "3075947431": { name:"Moh Imansyah Ramadhan",status:"Lulus" },
+    "75903105": { name:"Muh. Rezki Anugera",status:"Lulus" },
+    "52168601": { name:"NOFER DWI SAPUTRA",status:"Lulus" },
+    "64530122": { name:"NOPSI PUTRI SION SIOLEMBA",status:"Lulus" },
+    "75260144": { name:"Putri",status:"Lulus" },
+    "64829922": { name:"Rispy Anugrah",status:"Lulus" },
+    "78663513": { name:"SALSABILAH APRILIA",status:"Lulus" },
+    "53618691": { name:"STEVANO ALBERTO",status:"Lulus" },
+    "68878652": { name:"Stevanya Faniati Habel",status:"Lulus" },
+    "67851774": { name:"SUMANTI. S.NAPA",status:"Lulus" },
+    "72636600": { name:"TIARA AMELIA PAMULA",status:"Lulus" },
+    "75282412": { name:"VIVI AULIA",status:"Lulus" },
+    "77912397": { name:"WINALDA DELFI LIMBAN",status:"Lulus" },
+    "75996495": { name:"YITRA SENA TOGASI",status:"Lulus" },
+    "56939682": { name:"ADE RAFLI ADRIANTO",status:"Lulus" },
+    "64089497": { name:"ALDI ARI ARDIANSYAH",status:"Lulus" },
+    "65200656": { name:"ANDIRA MARKUS SARRANG",status:"Lulus" },
+    "68366831": { name:"Anggun Lusesita",status:"Lulus" },
+    "83841926": { name:"ANGGUN WISDAWATI",status:"Lulus" },
+    "3047406645": { name:"Anjasmara Usman",status:"Lulus" },
+    "67084529": { name:"Ayen Dwi Putra",status:"Lulus" },
+    "68530359": { name:"DANIEL",status:"Lulus" },
+    "3043560514": { name:"Delon Maha Putra",status:"Lulus" },
+    "66575677": { name:"DELVI",status:"Lulus" },
+    "65330444": { name:"ELISABET PATU",status:"Lulus" },
+    "74209293": { name:"Feni Amelia",status:"Lulus" },
+    "72302910": { name:"GERALDO TYFANO IMANUEL ROMBE BASIANG",status:"Lulus" },
+    "71060990": { name:"Grasella",status:"Lulus" },
+    "77643650": { name:"Karel Brigdita",status:"Lulus" },
+    "65737634": { name:"KARLINA MARANATA LATEKA",status:"Lulus" },
+    "76267105": { name:"MOH SYARIF SAPUTRA",status:"Lulus" },
+    "75943915": { name:"MOH. AKSA",status:"Lulus" },
+    "69093559": { name:"MOH. ROHIM",status:"Lulus" },
+    "68612780": { name:"Moh. Taufik  Alfarabi",status:"Lulus" },
+    "61310719": { name:"MUH. AKBAR F.P",status:"Lulus" },
+    "59661348": { name:"Nelce",status:"Lulus" },
+    "65710648": { name:"PERES PATIMANG",status:"Lulus" },
+    "88115419": { name:"PETRA GALILEO CHRISTEAN PATTULUNG",status:"Lulus" },
+    "65960310": { name:"Putra Johan Jeferson",status:"Lulus" },
+    "72230581": { name:"RICARD GAEL TULAK ALLO",status:"Lulus" },
+    "23843827": { name:"SANDRO APRILIANO",status:"Lulus" },
+    "75474235": { name:"Sardianto",status:"Lulus" },
+    "67955809": { name:"Sazkiyah Asyifatul Jannah",status:"Lulus" },
+    "67629953": { name:"SEBASTIAN FREY",status:"Lulus" },
+    "67878639": { name:"Selvia",status:"Lulus" },
+    "62628849": { name:"SITI ROHIMA",status:"Lulus" },
+    "67282826": { name:"SUKOCO ADJI CAHYONO",status:"Lulus" },
+    "3064854444": { name:"Widya Ningsih Santu",status:"Lulus" },
+    "60117252": { name:"Yeheskiel",status:"Lulus" },
+    "66106887": { name:"YONAS",status:"Lulus" },
+    "67148944": { name:"Yudi Yanto Bunga",status:"Lulus" },
+    "3061841403": { name:"Zuaibatul Islamiyah",status:"Lulus" },
+    "67333832": { name:"AGIS HARNIKA",status:"Lulus" },
+    "75754248": { name:"Agresia",status:"Lulus" },
+    "3082974720": { name:"Andi Refan Setiawan",status:"Lulus" },
+    "79528726": { name:"APRILIUS PASKAHLIS DWI PALADANG",status:"Lulus" },
+    "76972799": { name:"AUREL FEBRINI",status:"Lulus" },
+    "67833055": { name:"CANTIKA PERMATA SARI",status:"Lulus" },
+    "85949575": { name:"Chelsea revi trifena",status:"Lulus" },
+    "74287213": { name:"CRYSTINICE VALENTINA",status:"Lulus" },
+    "75709936": { name:"ELSADAI KARUNIA TALALO",status:"Lulus" },
+    "71430881": { name:"FELISTY DWISCA PAKULLA",status:"Lulus" },
+    "75376161": { name:"GERIL ANTONI MANGI",status:"Lulus" },
+    "87307256": { name:"Ibnu Baadilla",status:"Lulus" },
+    "77775899": { name:"Jhosua Dearly",status:"Lulus" },
+    "88791520": { name:"KASMIA KEYSYA A",status:"Lulus" },
+    "61987986": { name:"KEZIA",status:"Lulus" },
+    "3083136109": { name:"Kristina Margareta Manulang",status:"Lulus" },
+    "71565146": { name:"LIFI AULIA",status:"Lulus" },
+    "73030646": { name:"Lutfia",status:"Lulus" },
+    "64247012": { name:"MARSHANDA",status:"Lulus" },
+    "73817457": { name:"Nadin Joanisya",status:"Lulus" },
+    "74149610": { name:"NADYA ZAHRA",status:"Lulus" },
+    "74407951": { name:"Nhaila Aulia",status:"Lulus" },
+    "133205820": { name:"NOVIA",status:"Lulus" },
+    "63826989": { name:"NUR AZIZAH",status:"Lulus" },
+    "3077467758": { name:"Nurfaisya",status:"Lulus" },
+    "78440770": { name:"Putri Zaitun.H.Gui",status:"Lulus" },
+    "73548115": { name:"SHE SHE",status:"Lulus" },
+    "64680510": { name:"Sri Yunita Dewi",status:"Lulus" },
+    "61027760": { name:"ST Hajar",status:"Lulus" },
+    "71717177": { name:"SYLVAIN ANDREA",status:"Lulus" },
+    "74459416": { name:"TASHA MEILANI",status:"Lulus" },
+    "3064430814": { name:"VANI",status:"Lulus" },
+    "75225370": { name:"WIDYA SAHLAN",status:"Lulus" },
+    "78598164": { name:"ADRIAN",status:"Lulus" },
+    "56508960": { name:"Agril",status:"Lulus" },
+    "71275773": { name:"ARIL",status:"Lulus" },
+    "73256529": { name:"Bretly Valintino M. Hapeta",status:"Lulus" },
+    "79018478": { name:"Chysen Krisopras Paat",status:"Lulus" },
+    "64215057": { name:"Cilmita Kala'Bong",status:"Lulus" },
+    "72530248": { name:"DEDAN RANGGA SAPUTRA",status:"Lulus" },
+    "72334086": { name:"Dimas Arya Anugrah",status:"Lulus" },
+    "62605260": { name:"Dona Fajar Riska",status:"Lulus" },
+    "64014407": { name:"FITRI HANDAYANI",status:"Lulus" },
+    "65344306": { name:"GIza Syahrani",status:"Lulus" },
+    "76212651": { name:"Gugun Fernandes Suli",status:"Lulus" },
+    "63025088": { name:"Jackson Renaldo",status:"Lulus" },
+    "61588165": { name:"JEASEN SAPUTRA LONDONG",status:"Lulus" },
+    "71168741": { name:"Jenisa Indriani Tanga",status:"Lulus" },
+    "75380413": { name:"Marcyah",status:"Lulus" },
+    "79009448": { name:"MARFRITZ PRAYUDA LINDANG",status:"Lulus" },
+    "76882216": { name:"Moh. Ghyan Al-Fatir",status:"Lulus" },
+    "74984859": { name:"Moses Fanuel",status:"Lulus" },
+    "75564299": { name:"Muhammad Rayhan Puja",status:"Lulus" },
+    "67783956": { name:"Naysia Misella Gorlette",status:"Lulus" },
+    "74881762": { name:"NUR ANISA PUTRI",status:"Lulus" },
+    "79509942": { name:"NURAINUN FITRA",status:"Lulus" },
+    "75580742": { name:"Priska Juwita Keren",status:"Lulus" },
+    "79110375": { name:"RAFI HIKMATIAR",status:"Lulus" },
+    "83118918": { name:"Rahma suci",status:"Lulus" },
+    "72801222": { name:"Rahmad",status:"Lulus" },
+    "36127434": { name:"RIAN",status:"Lulus" },
+    "54827836": { name:"Siti Aisyah Wulandari",status:"Lulus" },
+    "77492647": { name:"STANIATUL MUFIDA",status:"Lulus" },
+    "71531520": { name:"Sulfianti",status:"Lulus" },
+    "85452973": { name:"Vera Anastasya",status:"Lulus" },
+    "68217544": { name:"VIRA DWI AMBARWATI",status:"Lulus" },
+    "54662682": { name:"YANI",status:"Lulus" },
+    "71574964": { name:"Ahmad Kurniawan",status:"Lulus" },
+    "66391161": { name:"Alfianus",status:"Lulus" },
+    "78400450": { name:"Anggun Clesiya",status:"Lulus" },
+    "84576409": { name:"ARHAM SYAH",status:"Lulus" },
+    "75827054": { name:"Asmiranda Yanis",status:"Lulus" },
+    "66845384": { name:"Ceren Claudia Sual",status:"Lulus" },
+    "79336311": { name:"CHELLIN MECILITASARI",status:"Lulus" },
+    "72874807": { name:"Citra Kristi",status:"Lulus" },
+    "71146390": { name:"Evanglin",status:"Lulus" },
+    "77479439": { name:"FELIKS",status:"Lulus" },
+    "73764701": { name:"FREDLY ALXANDRIE TABUNTITI",status:"Lulus" },
+    "76503397": { name:"GHEFIRA APRILIA",status:"Lulus" },
+    "68240662": { name:"Hajariah",status:"Lulus" },
+    "76160812": { name:"IBRAHIM",status:"Lulus" },
+    "75842853": { name:"IVANNA GRACIA",status:"Lulus" },
+    "72947331": { name:"Jenris Febriani",status:"Lulus" },
+    "82009561": { name:"JONEL ROY",status:"Lulus" },
+    "73095646": { name:"Kezia",status:"Lulus" },
+    "77422224": { name:"Lodres winer",status:"Lulus" },
+    "67139408": { name:"LOLA NATALIA",status:"Lulus" },
+    "142112155": { name:"Marsya",status:"Lulus" },
+    "71897539": { name:"Moh Ainul Yaqin",status:"Lulus" },
+    "86300768": { name:"Moh.rizky",status:"Lulus" },
+    "68162710": { name:"Mutia Ramadani",status:"Lulus" },
+    "79569314": { name:"Nur Aisyah",status:"Lulus" },
+    "72907462": { name:"NURFAIDAH",status:"Lulus" },
+    "73479166": { name:"Ravel",status:"Lulus" },
+    "67117486": { name:"Rein",status:"Lulus" },
+    "26932080": { name:"Renaldo",status:"Lulus" },
+    "61686375": { name:"Salsa Andini",status:"Lulus" },
+    "62587251": { name:"Salwa Sakila",status:"Lulus" },
+    "74268136": { name:"Sugianto",status:"Lulus" },
+    "73588193": { name:"TIARA",status:"Lulus" },
+    "56905913": { name:"Vaddli Givon Kereu",status:"Lulus" },
+    "78651439": { name:"VAREL VERNANDO ALIPA",status:"Lulus" },
+    "67566995": { name:"Zulfianti",status:"Lulus" },
     };
 
     // Fungsi untuk menampilkan halaman login
