--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
     "0053618691": { name:"STEVANO ALBERTO",status:"Lulus" },
     "0068878652": { name:"Stevanya Faniati Habel",status:"Lulus" },
     "0067851774": { name:"SUMANTI. S.NAPA",status:"Lulus" },
-    "0072636600": { name:"TIARA AMELIA PAMULA",status:"Lulus" },
+    "0072636600": { name:"TIARA AMMELIA PAMULA",status:"Lulus" },
     "0075282412": { name:"VIVI AULIA",status:"Lulus" },
     "0077912397": { name:"WINALDA DELFI LIMBAN",status:"Lulus" },
     "0075996495": { name:"YITRA SENA TOGASI",status:"Lulus" },
@@ -425,7 +425,7 @@
     "0072334086": { name:"Dimas Arya Anugrah",status:"Lulus" },
     "0062605260": { name:"Dona Fajar Riska",status:"Lulus" },
     "0064014407": { name:"FITRI HANDAYANI",status:"Lulus" },
-    "0065344306": { name:"GIza Syahrani",status:"Lulus" },
+    "0065344306": { name:"Giza Syaharani",status:"Lulus" },
     "0076212651": { name:"Gugun Fernandes Suli",status:"Lulus" },
     "0063025088": { name:"Jackson Renaldo",status:"Lulus" },
     "0061588165": { name:"JEASEN SAPUTRA LONDONG",status:"Lulus" },
@@ -456,7 +456,7 @@
     "0075827054": { name:"Asmiranda Yanis",status:"Lulus" },
     "0066845384": { name:"Ceren Claudia Sual",status:"Lulus" },
     "0079336311": { name:"CHELLIN MECILITASARI",status:"Lulus" },
-    "0072874807": { name:"Citra Kristi",status:"Lulus" },
+    "0072874807": { name:"Chitra Christy",status:"Lulus" },
     "0071146390": { name:"Evanglin",status:"Lulus" },
     "0077479439": { name:"FELIKS",status:"Lulus" },
     "0073764701": { name:"FREDLY ALXANDRIE TABUNTITI",status:"Lulus" },
